# Qugeister_clean

./: .coverage  .gitignore  CLEANUP_REPORT.md  LICENSE  Makefile  README.md  STRUCTURE.md  api_design_benefits.py  copy61_huber_experiment.py  demo_3step_system.html  discussion_summary.md  enhanced_12channel_example.py  extended_train_6qubits.py  fast_quantum_trainer.py  full_cqcnn_experiment.ipynb  human_vs_ai_battle.py  index.html  key_files_index.md  modular_quantum_api_design.py  probabilistic_quantum_circuit_design.py  pyproject.toml  quantum_ai_tutorial.ipynb  quantum_battle_3step_system.html  quantum_battle_3step_working.html  quantum_battle_system.py  quantum_cqcnn_balanced_config_2025-09-25.json  quantum_encoder_replacement_design.py  quantum_recovery_stable_config_2025-09-25.json  quick_test.py  requirements.txt  setup.py  test_6qubits_vs_random.py  test_qubits_6.py
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml  pages.yml
config/: default.yaml
docs/: ARCHITECTURE.md  DEPRECATED_FILES.md  README_KERNEL.md  README_SIMPLIFIED.md
experiments/configs/: cqcnn_config_2025-09-24.json  cqcnn_config_2025-09-26.json  experiments_configs_cqcnn_config_2025-09-26.json  quantum_anti_draw_config_2025-09-26.json  quantum_copy2_enhanced_config_2025-09-26.json  quantum_copy5_mild_anti_draw_config_2025-09-26.json  quantum_copy61_improved_config_2025-09-26.json  quantum_copy62_advanced_config_2025-09-26.json  quantum_copy63_enhanced_config_2025-09-26.json  quantum_copy6_extended_learning_config_2025-09-26.json  quantum_copy6_progressive_learning_config_2025-09-26.json  quantum_copy_convergence_config_2025-09-26.json  quantum_cqcnn_balanced_config_2025-09-25.json  quantum_cqcnn_config_2025-09-24.json  quantum_geister_config_2025-09-24 (1).json  (+4 more)
legacy/: 3step_system.html  design_rationality_analysis.py  quantum_ai_playground.html  rl_module_flow_analysis.py
legacy_experiments/: convergence_optimization.py  convergence_test_5qubits.py  copy61_improved_experiment.py  copy6_extended_experiment.py  enhanced_convergence_detector.py  optimized_single_convergence_experiment.py
notebooks/: full_cqcnn_experiment copy 6.ipynb  quantum_ai_training_clean.ipynb
scripts/: analyze.py  migrate_legacy.py  train.py
src/qugeister/: __init__.py
tools/: auto_battle_viewer.py  board_transition_viewer.py  model_battle.py  simple_trainer.py  unified_trainer.py
(+52 files in other folders)
